Lab06e Made a subclass of DialogFragment that displays the instructions of the game as an alert dialog, made UI nicer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title">Minute Math</string>
     <string name="start">Start</string>
     <string name="score">Score: 0</string>
+    <string name="instructions">Instructions</string>
 </resources>
